name:                stocks
version:             0.1.0.0
synopsis:            Library for the Iextrading API
description:         Simple library for interacting with the Iextrading API
homepage:            https://github.com/dabocder/stocks#readme
license:             BSD3
license-file:        LICENSE
author:              David Bouchare
maintainer:          David Bouchare
copyright:           2018 David Bouchare
category:            Net
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Net.Stocks
  -- other-modules:
  -- other-extensions:
  build-depends: base == 4.*
               , HTTP >= 4000.2.12
               , text >= 1.1.0
               , aeson >= 0.8.0
               , bytestring >= 0.10.4
  hs-source-dirs:      src
  default-language:    Haskell2010